deploy/whmall-dev-app.yaml
---
# product
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
spec:
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product 
    spec:
      containers:
      - name: product
        image: "product:v1.1.4"
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        volumeMounts:
        - name: product-config
          mountPath: /opt/whmall/product/conf/dev
      volumes:
      - name: product-config
        configMap:
          name: whmall-config
          items: 
          - key: product-app-config
            path: conf.yaml
---
# frontend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: "frontend:v1.1.4"
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: frontend-config
          mountPath: /opt/whmall/frontend/conf/dev
      volumes:
      - name: frontend-config
        configMap:
          name: whmall-config
          items: 
          - key: frontend-app-config
            path: conf.yaml
---
# cart
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart
spec:
  selector:
    matchLabels:
      app: cart
  template:
    metadata:
      labels:
        app: cart
    spec:
      containers:
      - name: cart
        image: "cart:v1.1.4"
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        volumeMounts:
        - name: cart-config
          mountPath: /opt/whmall/cart/conf/dev
      volumes:
      - name: cart-config
        configMap:
          name: whmall-config
          items: 
          - key: cart-app-config
            path: conf.yaml
---
# checkout
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout
spec:
  selector:
    matchLabels:
      app: checkout
  template:
    metadata:
      labels:
        app: checkout
    spec:
      containers:
      - name: checkout
        image: "checkout:v1.1.4"
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        volumeMounts:
        - name: checkout-config
          mountPath: /opt/whmall/checkout/conf/dev
      volumes:
      - name: checkout-config
        configMap:
          name: whmall-config
          items:
          - key: checkout-app-config
            path: conf.yaml
---
# email
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email
spec:
  selector:
    matchLabels:
      app: email
  template:
    metadata:
      labels:
        app: email
    spec:
      containers:
      - name: email
        image: "email:v1.1.5"
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        volumeMounts:
        - name: email-config
          mountPath: /opt/whmall/email/conf/dev
      volumes:
      - name: email-config
        configMap:
          name: whmall-config
          items: 
          - key: email-app-config
            path: conf.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
spec:
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
      - name: payment
        image: "payment:v1.1.4"
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        volumeMounts:
        - name: payment-config
          mountPath: /opt/whmall/payment/conf/dev
      volumes:
      - name: payment-config
        configMap:
          name: whmall-config
          items: 
          - key: payment-app-config
            path: conf.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
spec:
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
      - name: user
        image: "user:v1.1.4"
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        volumeMounts:
        - name: user-config
          mountPath: /opt/whmall/user/conf/dev
      volumes:
      - name: user-config
        configMap:
          name: whmall-config
          items: 
          - key: user-app-config
            path: conf.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
spec:
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
      - name: order
        image: "order:v1.1.4"
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        volumeMounts:
        - name: order-config
          mountPath: /opt/whmall/order/conf/dev
      volumes:
      - name: order-config
        configMap:
          name: whmall-config
          items: 
          - key: order-app-config
            path: conf.yaml
